--- a/gdpopup.html
+++ b/gdpopup.html
@@ -47,7 +47,7 @@
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/" id="project" title="Basic project information">Proj</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/" id="md" title="Project Metadata">MD</a>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/query" id="query" title="Listing resources within project by type">Query</a>
-      <a class="needpid" href="https://${SERVER}/#s=/gdc/projects/${PID}|dataPage|ldmModel" id="model" title="Logical Data Model of a project (image)">LDM</a><sub><a class="subnav" href="https://${SERVER}/labs/apps/ldm_visualizer/" id="model2" title="Logical Data Model of last UI selected project in new LABS application">LAB</a></sub>
+      <a class="needpid" href="https://${SERVER}/#s=/gdc/projects/${PID}|dataPage|ldmModel" id="model" title="Logical Data Model of a project (image)">LDM</a><sub><a class="subnav needpid" href="https://${SERVER}/labs/apps/app_link?pid=${PID}&app=ldm_visualizer" id="model2" title="Logical Data Model of selected project in new LABS application">LAB</a></sub>
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/ldm/manage2" id="mng" title="Execute MAQL to modify project LDM">Mng</a>
       <span class="spacer"></span> 
       <a class="needpid" href="https://${SERVER}/gdc/md/${PID}/validate" id="validate" title="Validation of project structure and data">Valid</a>
@@ -58,7 +58,7 @@
       <a class="needpid" href="https://${SERVER}/gdc/projects/${PID}/dataload/processes" id="transformations" title="ETL processes within a project">ETL</a>
       <a class="needpid" href="https://${SERVER}/admin/disc/#/projects/${PID}" id="schedules" title="ETL Schedules within a project">Sch</a><sub><a class="needpid subnav" href="https://${SERVER}/gdc/projects/${PID}/schedules" id="schedules_gp" title="ETL Schedules within a project (show in Gray Pages)">GP</a></sub>
       <span class="spacer" id="last-spacer"></span>
-      <a class="needpid" href="#" id="something" title="Useful Project Information">ℹ</a>
+      <a class="needpid" href="#" id="something" title="Useful Project Information">i</a>
     </div>
     </div>
 <script src="gdpopup.js"></script>
