--- a/options.html
+++ b/options.html
@@ -111,18 +111,34 @@
     </fieldset>
 
     <fieldset>
-        <legend>Magic button:</legend>
-        <div class="detail">You can add custom button and use wildcards ${SERVER}, ${PID}, ${OBJ}:</div>
-        <div>Click on the examples below to set magic button or create your own.</div>
+        <legend>Magic buttons:</legend>
+        <div class="detail">You can add up to five custom buttons. Click on the examples below to set magic button.</div>
+        <div>Or use wildcards ${SERVER}, ${PID}, ${OBJ} to create your own.</div>
         <div>
           <a id="magic_validate" href="#">Validation</a>
           <a id="magic_clone" href="#">Clone project</a>
           <a id="magic_params" href="#">ETL Params</a>
         </div>
         <br>
-        <label for="magic_title">Title: </label><input type="text" id="magic_title" maxlength="6"><br>
+        <label for="magic_title">Title: </label><input type="text" id="magic_title" maxlength="5"><br>
         <label for="magic_help">Popup help: </label><input type="text" id="magic_help"><br>
         <label for="magic_link">Link: </label><input type="text" id="magic_link" size="90"><br>
+        <br>
+        <label for="magic2_title">Title: </label><input type="text" id="magic2_title" maxlength="5"><br>
+        <label for="magic2_help">Popup help: </label><input type="text" id="magic2_help"><br>
+        <label for="magic2_link">Link: </label><input type="text" id="magic2_link" size="90"><br>
+        <br>
+        <label for="magic3_title">Title: </label><input type="text" id="magic3_title" maxlength="5"><br>
+        <label for="magic3_help">Popup help: </label><input type="text" id="magic3_help"><br>
+        <label for="magic3_link">Link: </label><input type="text" id="magic3_link" size="90"><br>                
+        <br>
+        <label for="magic4_title">Title: </label><input type="text" id="magic4_title" maxlength="5"><br>
+        <label for="magic4_help">Popup help: </label><input type="text" id="magic4_help"><br>
+        <label for="magic4_link">Link: </label><input type="text" id="magic4_link" size="90"><br>                
+        <br>
+        <label for="magic5_title">Title: </label><input type="text" id="magic5_title" maxlength="5"><br>
+        <label for="magic5_help">Popup help: </label><input type="text" id="magic5_help"><br>
+        <label for="magic5_link">Link: </label><input type="text" id="magic5_link" size="90"><br>                
     </fieldset>
 
     <fieldset>
