--- a/gd_help.html
+++ b/gd_help.html
@@ -224,12 +224,17 @@ You can also target any specific <a class="dev_link" href="https://secure.goodda
 <h2>What's new</h2>
 
 
-<p>v0.9008:
+<p>v0.90010:
   <ul>
     <li>Up to 5 magic buttons with improved fit algorithm</li>
     <li>Data link (project WebDav) replaced with DB (Data Explorer setup)</li>
     <li>Fix for some urlencoded links when detecting PID</li>
     <li>Removed DL link and slight toolbar visual tuning</li>
+    <li>Time to load added to dataset parser (for both standard and batch load)</li>
+    <li>Support for new ETL statuses in overlay</li>
+    <li>Support for new GD applications - CSV Upload, KPIs, Analytical Designer</li>
+    <li>Doubleclick "Error found" in Log Parser to scroll to last line</li>
+    <li>Doubleclick Phase in Log Parser to scroll to phase end (final report when WatchDog is visible)</li>
 </ul>
 </p>
 
